# thaw

./: .gitignore  README.md  config.json  pyproject.toml
data/: utility_costs.csv
data/processed/: efficiency_metrics.csv  electric_rates.csv  oil_rates.csv  utility_costs.csv  weather_data.csv
data/raw/: electric_raw.csv  oil_raw copy.csv  oil_raw.csv
scripts/: __init__.py  analyze_efficiency.py  analyze_savings.py  calculate_efficiency.py  extract_pdf_data.py  fetch_weather.py  process_raw_data.py  visualize_costs.py
tests/: test_utility_analysis.py
utility_analysis/: __init__.py  process_raw_data.py  utility_analysis.py
